--- a/standardcomponents/stylebewaar.css
+++ b/standardcomponents/stylebewaar.css
@@ -61,7 +61,6 @@ body {
 /* desktop mode............/// */
 
 .navbar input[type="checkbox"],
-
 .navbar .hamburger-lines {
   display: none;
 }
@@ -121,7 +120,8 @@ body {
   background: linear-gradient(
       rgba(240, 240, 240, 0.144),
       rgba(255, 255, 255, 0.336)
-    );
+    ),
+    url("./dummybanner.jpg");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
